--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0;
 }
 
@@ -7,20 +7,20 @@
   background-color: #16194e;
   width: 100%;
 }
-.header #w{
+.header #w {
   text-align: center;
   background-color: #111227;
 }
 .header a {
   color: #f2f2f2;
   text-decoration: none;
-  margin: 0 80px;
+  margin: 0 40px;
   padding-bottom: 3px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   font-weight: bold;
 }
-.header ul{
+.header ul {
   text-align: center;
 }
 .item {
@@ -33,3 +33,11 @@ a:hover {
 }
 
 /* ------------------------- Body Section ------------------------- */
+.home-bg-img {
+  width: 100%;
+  height: 94vh;
+  background-image: url("./bg1.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
