--- a/style.css
+++ b/style.css
@@ -5,29 +5,34 @@
 /* ------------------------- Header Section ------------------------- */
 
 .header {
-  background-color: #16194e;
+  background-color: #111227;
   width: 100%;
 }
-.header #w {
-  text-align: left;
-  background-color: #111227;
-}
-.header a {
+a {
   color: #f2f2f2;
   text-decoration: none;
-  margin: 0 40px;
+  margin: 0 20px;
   padding-bottom: 3px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   font-weight: bold;
+  /*
+  TODO: Change margin value while coding for responsive layout. 
+  */
 }
-.header ul {
-  text-align: center;
+ul {
+  text-align: right;
 }
 .item {
   display: inline-block;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.head-img{
+  height: 80px;
+  width: 80px;
+  float: left;
+  padding-left: 30px;
 }
 a:hover {
   border-bottom: 1px solid #f2f2f2;
@@ -36,7 +41,7 @@ a:hover {
 /* ------------------------- Body Section ------------------------- */
 .home-bg-img {
   width: 100%;
-  height: 94vh;
+  height: 100vh;
   background-image: url("./bg1.jpg");
   background-position: center;
   background-repeat: no-repeat;
