--- a/style.css
+++ b/style.css
@@ -114,3 +114,12 @@ footer{
   padding: 10px;
   text-align: center;
 }
+
+
+/* neeeds editing........................
+
+1. alignment of text inside boxes
+2. hover alignment 
+3. font family of boxes
+
+........................................*/
