--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ footer{
 /* neeeds editing........................
 
 1. alignment of text inside boxes
-2. hover alignment 
+2. hover text alignment inside boxes  
 3. font family of boxes
 
 ........................................*/
