--- a/style.css
+++ b/style.css
@@ -118,8 +118,10 @@ footer{
 
 /* neeeds editing........................
 
-1. alignment of text inside boxes
-2. hover text alignment  inside boxes.  
-3. font family of boxes
+1. alignment of text inside boxes buttom
+ 
+2. font family of boxes
+
+3. Hover alignment of the text inside the box
 
 ........................................*/
