index and style file modified sep-29

--- a/style.css
+++ b/style.css
@@ -2,11 +2,19 @@
   margin: 0;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 /* ------------------------- Header Section ------------------------- */
 
 .header {
-  background-color: #111227;
+  background: linear-gradient(to top, #000066 17%, #990099 100%);
   width: 100%;
+  position: fixed;
+  overflow: hidden;
+  top: 0px;
+  
 }
 a {
   color: #f2f2f2;
@@ -26,7 +34,7 @@ ul {
 .item {
   display: inline-block;
   margin-top: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 0px;
 }
 .head-img{
   height: 80px;
@@ -47,7 +55,7 @@ a:hover {
   font-size: 35px;
   font-family: 'Quicksand', sans-serif;
   padding: 50px;
-  background-color: #2d545e;
+  background: linear-gradient(to bottom, #000066 -6%, #9900ff 85%);
   color: #c2edda;
 }
 
