--- a/style.css
+++ b/style.css
@@ -65,15 +65,21 @@ a:hover {
 }
 
 #navBar input[type=text] {
-padding: 4px;
-margin-top: 24px;
-font-size: 21px;
-border: none;
-margin-left: 76px;
-border-radius: 24px;
-background-color: rgba(170, 170, 170, 0.233);
-
+  padding: 0px;
+  margin-top: 31px;
+  font-size: 23px;
+  border: none;
+  margin-left: 88px;
+  border-radius: 5px;
+  background-color: rgba(170, 170, 170, 0.233);
 }
+
+.SearchImg{
+  height: 24px;
+  width: 24px;
+  padding: 8px;
+}
+
 .hide {
   display: none;
 }
@@ -90,11 +96,16 @@ background-color: rgba(170, 170, 170, 0.233);
 
 .headingMovies{
   text-align: center;
+  margin-top: 78px;
   font-size: 35px;
   font-family: 'Quicksand', sans-serif;
   padding: 50px;
   background: linear-gradient(to top, #990099 -65%, #000066 100%);
   color: #c2edda;
+}
+
+#HeadingN{
+  margin: 0px;
 }
 
 /* css for boxes */
@@ -135,7 +146,7 @@ background-color: rgba(170, 170, 170, 0.233);
 /* css for transition inside boxes */
 
 .middle {
-  transition: .5s ease;
+  transition: 1s ease;
   opacity: 0;
   position: absolute;
   transform: translate(5%, -241%);
@@ -151,7 +162,7 @@ background-color: rgba(170, 170, 170, 0.233);
 }
 
 .text {
-  background-color: #e2324f;
+  background-color: #192A56;
   color: white;
   font-size: 16px;
   padding: 16px 32px;
