few buttons added

--- a/series/webseries.css
+++ b/series/webseries.css
@@ -1,4 +1,43 @@
 
+#MovieSectionGenre{
+  margin: 22px;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+}
+
+#MovieSectionGenre .container{
+       
+  margin: 20px auto;
+  margin-bottom: 25px;
+  margin-left: 22px;
+  width: 100%;
+ 
+     
+}
+
+#MovieSectionGenre .container #GenreLang{
+
+  padding:50px ;
+  background-color: rgb(60, 0, 109);
+  font-size: 30px;
+  border-radius: 35px;
+  box-shadow: 14px 21px 40px grey;
+  color: aliceblue;
+  cursor: pointer;
+  width: 100%;
+  max-width: 234px;
+  box-sizing: border-box;
+
+}
+
+#GenreLang:hover{
+opacity: 0.5;
+}
+
+
+
+/*-----------------------------css for search by language --------------------------------------*/
+
 
 #MovieSectionLang{
 
@@ -11,7 +50,7 @@
        
   margin: 25px auto;
   margin-bottom: 20px;
-  margin-left: 125px;
+  margin-left: 75px;
   width: 100%;
  
      
@@ -25,6 +64,11 @@
   border-radius: 35px;
   box-shadow: 14px 21px 40px grey;
   color: aliceblue;
+  cursor: pointer;
+  width: 100%;
+  max-width: 290px;
+  box-sizing: border-box;
+
 }
 
 #GenreLang:hover{
