templates--- changes made

--- a/MyProject/Templates/index.html
+++ b/MyProject/Templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, maximum-scale=1">
     <title>First Impression</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../static/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Quicksand:wght@300&display=swap" rel="stylesheet">
 
 
@@ -18,12 +18,12 @@
 
     
     <header class="header">
-        <img src="websiteLogo.png" class="head-img" alt="firstimpression" />
+        <img src="../static/websiteLogo.png" class="head-img" alt="firstimpression" />
         <!-- Navigation bar -->
         <ul id="navBar">
             <li class="item"><a class="aitems" href="index.html">Home</a></li>
-            <li class="item"><a class="aitems" href="movies/movies.html">Movies</a></li>
-            <li class="item"><a class="aitems" href="series/webseries.html">Web Series</a></li>
+            <li class="item"><a class="aitems" href="movies.html">Movies</a></li>
+            <li class="item"><a class="aitems" href="webseries.html">Web Series</a></li>
             <li class="item"><a class="aitems" href="about.html">About Us</a></li>
             <li class="item"><a class="aitems" href="contact.html">Contact Us</a></li>
             <li class="item"><a class="aitems" href="profile.html" target="blank">Profile</a></li>
@@ -32,7 +32,7 @@
                 <form action="https://www.google.com/">     <!--should add server pointer to search -->
                 <input type="text" placeholder="type here to search" name="search">
                 <button type="submit">
-                    <img src="searchIcon.png" alt="searchButton" class="SearchImg">
+                    <img src="../static/searchIcon.png" alt="searchButton" class="SearchImg">
                     <div class="hide">Search</div>
                 </button>
                 </form>
@@ -58,7 +58,7 @@
             <div id="MovieSection">
 
                 <div class="container">
-                    <img src="movie1.jpg" alt="image" class="image1">
+                    <img src="../static/movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9 </p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -66,7 +66,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="movie1.jpg" alt="image" class="image1">
+                    <img src="../static/movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -74,7 +74,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="movie1.jpg" alt="image" class="image1">
+                    <img src="../static/movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -83,7 +83,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="movie1.jpg" alt="image" class="image1">
+                    <img src="../static/movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -92,7 +92,7 @@
 
 
                 <div class="container">
-                    <img src="movie1.jpg" alt="image" class="image1">
+                    <img src="../static/movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -117,7 +117,7 @@
             <div id="MovieSection">
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -125,7 +125,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -133,7 +133,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -142,7 +142,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -151,7 +151,7 @@
 
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -173,7 +173,7 @@
             <div id="MovieSection">
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -181,7 +181,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -189,7 +189,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -198,7 +198,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -207,7 +207,7 @@
 
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -231,7 +231,7 @@
             <div id="MovieSection">
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -239,7 +239,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -247,7 +247,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -256,7 +256,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -265,7 +265,7 @@
 
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../static/wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -289,9 +289,9 @@
             <p class="footerText">Follow Us</p>
 
             <ul id="footerLinks">
-                <li class="aSlink"><a href="https://www.instagram.com/" target="blank"><img class="LinkImg" src="instagram.png" alt="instagram"></a></li>
-                <li class="aSlink"><a href="https://www.facebook.com/" target="blank"><img class="LinkImg" src="facebook.png" alt="instagram"></a></li>
-                <li class="aSlink"><a href="https://twitter.com/" target="blank"><img class="LinkImg" src="Twitter.png" alt="instagram"></a></li>
+                <li class="aSlink"><a href="https://www.instagram.com/" target="blank"><img class="LinkImg" src="../static/instagram.png" alt="instagram"></a></li>
+                <li class="aSlink"><a href="https://www.facebook.com/" target="blank"><img class="LinkImg" src="../static/facebook.png" alt="instagram"></a></li>
+                <li class="aSlink"><a href="https://twitter.com/" target="blank"><img class="LinkImg" src="../static/Twitter.png" alt="instagram"></a></li>
                 
                 <li class="PrivacyLink"><a class="aPrivacy" href="#" target="blank">Pivacy Policy</a></li>
                 <li class="PrivacyLink"><a class="aPrivacy" href="#" target="blank">Terms & Conditions</a></li>
